--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -6,10 +6,10 @@ set-option -g status-bg default
 set-option -g status-style bg=default,fg=colour223 # bg=bg1, fg=fg1
 
 # default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+set-window-option -g window-status-style bg=default,fg=colour237 # bg=yellow, fg=bg1
 
 # default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+set-window-option -g window-status-activity-style bg=default,fg=colour248 # bg=bg1, fg=fg3
 
 # active window title colors
 set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
