--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -12,7 +12,7 @@ set-window-option -g window-status-style bg=default,fg=colour237 # bg=yellow, fg
 set-window-option -g window-status-activity-style bg=default,fg=colour248 # bg=bg1, fg=fg3
 
 # active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+set-window-option -g window-status-current-style bg=default,fg=colour237 # fg=bg1
 
 # pane border
 set-option -g pane-active-border-style fg=colour250 #fg2
