--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -44,9 +44,10 @@ set-window-option -g window-status-separator ""
 
 #section_separators = { left = '', right = ''},
 set-option -g status-left "#[bg=default,fg=colour248] #S #[bg=default,fg=colour241,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h "
+set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h "
 
 set-window-option -g window-status-current-format "#[bg=default,fg=colour240,nobold,noitalics,nounderscore]#[bg=default,fg=colour214] #I#[bg=default,fg=colour214,bold] #W#{?window_zoomed_flag,*Z,} #[bg=default,fg=colour214,nobold,noitalics,nounderscore]"
 set-window-option -g window-status-format "#[bg=default,fg=colour237,noitalics]#[bg=default,fg=colour223] #I#[bg=default,fg=colour223] #W #[bg=default,fg=colour214,noitalics]"
 #
 # vim: set ft=tmux tw=0 nowrap:
+
